--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "discord-py>=2.5.2",
     "dotenv>=0.9.9",
     "openai>=1.95.1",
+    "pillow>=11.3.0",
     "tiktoken>=0.9.0",
 ]
 
