--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ requires-python = ">=3.13"
 dependencies = [
     "discord-py>=2.5.2",
     "dotenv>=0.9.9",
+    "google-api-python-client>=2.176.0",
     "openai>=1.95.1",
     "pillow>=11.3.0",
     "tiktoken>=0.9.0",
