--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "google-api-python-client>=2.176.0",
     "openai>=1.95.1",
     "pillow>=11.3.0",
+    "pyyaml>=6.0.2",
 ]
 
 [project.scripts]
